# Jupyter-RDFify

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
jupyter-rdfify/: __init__.py  graph.py  graph_manager.py  jupyter_rdf.py  log.py  rdf_module.py  serialization.py  shex.py  sparql.py  table.py
rwth-jupyter-rdfify/: util.py
src/rwth-jupyter-rdfify/: __init__.py
src/rwth_jupyter_rdfify/: __init__.py  persistence.py
