[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-rdfify"
version = "1.2.1"
authors = [
     { name = "Lars Pieschel"},
    { name = "Md. Rezaul Karim"},
    { name= "Laurenz Neumann", email="laurenz.neumann@dbis.rwth-aachen.de"}
]
description = "IPython Extension for semantic web technology support (Turtle, SPARQL, etc.)"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: IPython",
]
dependencies = [
    "rdflib~=6.0",
    "ipython>=7.0.0",
    "graphviz",
    "sparqlwrapper>=1.8.5",
    "sparqlslurper~=0.4",
    "PyShEx",
    "owlrl",
]

[project.urls]
Homepage = "https://git.rwth-aachen.de/i5/teaching/jupyter-rdfify"

