[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rwth-jupyter-rdfify"
version = "1.4"
authors = [
     { name = "Lars Pieschel"},
    { name = "Md. Rezaul Karim"},
    { name= "Laurenz Neumann", email="laurenz.neumann@dbis.rwth-aachen.de"}
]
description = "IPython Extension for semantic web technology support (Turtle, SPARQL, etc.)"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: IPython",
]
dependencies = [
    "rdflib~=6.0",
    "ipython>=7.0.0",
    "graphviz",
    "sparqlwrapper>=1.8.5",
    "sparqlslurper~=0.4",
    "PyShEx",
    "owlrl",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["rwth_jupyter_rdfify*"]

[project.urls]
Homepage = "https://github.com/SemWebNotebooks/Jupyter-RDFify"

